[package]
name = "jrnl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
yaml-rust = "0.4"
regex = "1.7"
lazy_static = "1.4.0"
config = "0.13"
humantime = "*"
directories = "1.0.2"
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.9.0"
serde_json = "1.0"
serde_yml = "0.0.12"
colored = "2.1.0"
indexmap = { version = "2.5.0", features = ["serde"] }
